--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@ font-weight: bold;
         <div class="col-sm-4">
         
 <div class="project-card">
-  <img src="image/DELICES.png" alt="Project Image" class="project-image">
+  <img src="image/Playful Donut and Sweets Shop Logo.png" alt="Project Image" class="project-image">
   <div class="project-overlay">
     <div class="project-title">DELICES</div>
     <div class="project-description">
